# paste

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  implementation.md
packaging/: install.sh  paste.desktop
resources/styles/: dark.qss  light.qss
src/: app.py  main.py
src/database/: cleanup.py  db.py  models.py  search.py
src/monitor/: clip_processor.py  clipboard_monitor.py  monitor_manager.py  types.py
src/storage/: config.py  file_manager.py
src/ui/: filter_bar.py  history_list.py  main_window.py  preview.py  search_bar.py  tray.py
src/ui/settings/: hotkey_dialog.py
src/utils/: app_detector.py  autostart.py  dedup.py  diagnostics.py  hotkey.py  thumbnail.py  url.py
tests/: test_clip_processor.py  test_config.py  test_database.py  test_dedup.py  test_installer.py  test_tray_hotkey.py  test_ui_refresh.py  test_url.py
